--- a/photologue/templates/photologue/new_reply.html
+++ b/photologue/templates/photologue/new_reply.html
@@ -1,8 +1,8 @@
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
     <!-- REPLY FORM -->
     <form class="reply-form" action="" method="post">{% csrf_token %}
-        <input id="id_author" name="author" type="hidden" value="{{ request.user.id }}">
-        <input id="id_board_photo" name="board_owner" type="hidden" value="{{ photo.id }}">
+        <input id="id_author" name="p_author" type="hidden" value="{{ request.user.id }}">
+        <input id="id_board_photo" name="board_photo" type="hidden" value="{{ photo.id }}">
         <input id="id_parent" name="parent" type="hidden">
         <div class="row">
             <div class="col s12">
