+ Mejoras en las publicaciones de la galeria

--- a/photologue/contrib/old_style_templates/templates/photologue/gallery_archive.html
+++ b/photologue/contrib/old_style_templates/templates/photologue/gallery_archive.html
@@ -23,6 +23,6 @@
         <p>No galleries were found.</p>
     {% endif %}
 
-    <p><a href="{% url 'photologue:gallery-list' %}">View all galleries.</a></p>
+    <p><a href="{% url 'photologue:publications_gallery-list' %}">View all galleries.</a></p>
 
 {% endblock %}
