--- a/photologue/contrib/old_style_templates/templates/photologue/gallery_archive_month.html
+++ b/photologue/contrib/old_style_templates/templates/photologue/gallery_archive_month.html
@@ -23,6 +23,6 @@ w{% extends "photologue/root.html" %}
         <p>No galleries were found.</p>
     {% endif %}
 
-    <p><a href="{% url 'photologue:gallery-list' 1 %}">View all galleries.</a></p>
+    <p><a href="{% url 'photologue:publications_gallery-list' 1 %}">View all galleries.</a></p>
 
 {% endblock %}
