--- a/photologue/templates/photologue/includes/gallery_sample.html
+++ b/photologue/templates/photologue/includes/gallery_sample.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{# Display a randomnly-selected set of photos from a given gallery #}
+{# Display a randomnly-selected set of photos from a given publications_gallery #}
 
 <div>
 
