--- a/photologue/contrib/old_style_templates/templates/photologue/gallery_detail.html
+++ b/photologue/contrib/old_style_templates/templates/photologue/gallery_detail.html
@@ -17,6 +17,6 @@
             </div>
         {% endfor %}
     </div>
-    <p><a href="{% url 'photologue:gallery-list' %}">View all galleries</a></p>
+    <p><a href="{% url 'photologue:publications_gallery-list' %}">View all galleries</a></p>
 
 {% endblock %}
