--- a/photologue/templates/photologue/publications_entries.html
+++ b/photologue/templates/photologue/publications_entries.html
@@ -1,4 +1,4 @@
-{% load decorators %}
+{% load photo_publications_tags %}
 {% load app_filters %}
 {% load humanize %}
 {% load avatar_tags %}
@@ -199,12 +199,12 @@
                                     {% if user.is_authenticated and user.id != node.p_author.id %}
                                         {% comment %} Si el usuario esta logueado y no es al autor {% endcomment %}
                                         <li title="No me gusta" class="hate-comment" id="fa-hate"
-                                            {% if node.pk|user_in_hated_list:user.pk %}style="color: rgb(186, 104, 200);"{% endif %}>
+                                            {% if node.pk|user_in_hated_photo_list:user.pk %}style="color: rgb(186, 104, 200);"{% endif %}>
                                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                                             <i class="fa hate-value">{% with node.total_hates as hates %}{% if hates > 0 %}{{ hates|intword }}{% endif %}{% endwith %}</i>
                                         </li>
                                         <li id="like-heart" title="¡Me gusta!" class="like-comment"
-                                            {% if node.pk|user_in_liked_list:user.pk %}style="color: #f06292;"{% endif %}>
+                                            {% if node.pk|user_in_liked_photo_list:user.pk %}style="color: #f06292;"{% endif %}>
                                             <i class="fa fa-angle-up" aria-hidden="true"></i>
                                             <i id="like-value" class="fa">{% with node.total_likes as likes %}{% if likes > 0 %}{{ likes|intword }}{% endif %}{% endwith %}</i>
                                         </li>
