--- a/skyfolk/static/sass/photo_detail.sass
+++ b/skyfolk/static/sass/photo_detail.sass
@@ -4,6 +4,9 @@ $graycolor: #95a5a6
 $boxshadow: 0 1px 5px rgba(0, 0, 0, .15)
 $blueskyfolk: #1e88e5
 
+.share-publication-div
+  display: none
+  
 .container-photo
   position: relative
   display: block
