--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -18,6 +18,41 @@
 
 {% block content %}
     <div class="container">
+     {% if user.is_active %}
+            {% comment %}
+            Formulario para citar un comentario
+            {% endcomment %}
+            <div class="row">
+                <div class="col l5 m12 12 default-div compose-div share-publication-div" id="share-publication-wrapper" data-id="">
+                    <div class="row">
+                        <div id="status" class="col s12 title-page-wrapper">
+                            <h4><i class="fa fa-quote-right" aria-hidden="true"></i> Citar publicacion</h4>
+                            <h6>Comparte esta publicación con tus seguidores</h6>
+                        </div>
+                    </div>
+                    <form id="share_publication_form" action="" method="post">{% csrf_token %}
+                        <div class="row">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ publication_shared.content }}
+                                    <label for="shared_comment_content">Escribe un comentario adicional</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12">
+                                <button type="submit" id="share_publication"
+                                        class="waves-effect waves-light btn right blue">
+                                    Citar<i class="material-icons right">send</i></button>
+                                <button type="button" id="close_share_publication"
+                                        class="waves-effect waves-light btn right transparent black-text">Cancelar<i
+                                        class="material-icons right">close</i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+    {% endif %}
         <div class="row">
             <div class="col l12 m12 s12 container-photo">
                 <div class="photo">
@@ -142,7 +177,6 @@
         </div>
     </div>
     {% compress js %}
-        <script src="{{ STATIC_URL }}js/publication_detail.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/photo_detail.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/socket_photo.js"></script>
