--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -2,13 +2,12 @@
 {% load avatar_tags %}
 {% load i18n %}
 {% load humanize %}
-{% block title %} <title>Skyfolk - Media</title> {% endblock %}
+{% block title %} <title>Skyfolk / Media </title> {% endblock %}
 
 {% block include_files %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css" onload="if(media!='all')media='all'">
-    <!-- Estilos para la galeria de fotos -->
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/cropper.min.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/cropper.min.css">
 {% endblock %}
 
 {% block content %}
