+ Mejorando publicaciones en galeria

--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -227,3 +227,6 @@ label.active
   margin-top: 0 !important
   .indeterminate
     background-color: #64B5F6 !important
+
+.active
+  color: $blueskyfolk !important
