--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -209,4 +209,20 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
   border-bottom: 1px solid #64B5F6 !important;
   box-shadow: 0 1px 0 0 #64B5F6 !important; }
 
+.input-field .prefix.active {
+  color: #64B5F6 !important; }
+
+label.active {
+  color: #64B5F6 !important; }
+
+/* LOADER COLOR */
+.progress {
+  background-color: white !important;
+  margin-top: 0 !important; }
+  .progress .indeterminate {
+    background-color: #64B5F6 !important; }
+
+.active {
+  color: #1e88e5 !important; }
+
 /*# sourceMappingURL=login-signup.css.map */
