--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -13,8 +13,8 @@ Base para la interfaz en comun de todos los usuarios.
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     {% compress css %}
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/core.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/materialize.min.css" >
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/buscar.css" >
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/materialize.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/buscar.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.atwho.min.css">
@@ -24,6 +24,21 @@ Base para la interfaz en comun de todos los usuarios.
     {% compress js %}
         <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-72424818-2', 'auto');
+            ga('send', 'pageview');
+        </script>
     {% endcompress %}
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
@@ -86,13 +101,14 @@ Base para la interfaz en comun de todos los usuarios.
                                         class="waves-effect waves-light btn right transparent black-text">Cerrar<i
                                         class="material-icons right">close</i></button>
                                 <div class="file-field input-field">
-                                  <div class="btn">
-                                    <span>Imágenes</span>
-                                    <input id="id_image" name="image" type="file" multiple>
-                                  </div>
-                                  <div class="file-path-wrapper">
-                                    <input class="file-path validate" type="text" placeholder="Upload one or more files">
-                                  </div>
+                                    <div class="btn">
+                                        <span>Imágenes</span>
+                                        <input id="id_image" name="image" type="file" multiple>
+                                    </div>
+                                    <div class="file-path-wrapper">
+                                        <input class="file-path validate" type="text"
+                                               placeholder="Upload one or more files">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -134,13 +150,14 @@ Base para la interfaz en comun de todos los usuarios.
                                     class="waves-effect waves-light btn right transparent black-text">Cerrar<i
                                     class="material-icons right">close</i></button>
                             <div class="file-field input-field">
-                              <div class="btn">
-                                <span>Imágenes</span>
-                                <input id="id_image_self" name="image" type="file" multiple>
-                              </div>
-                              <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" placeholder="Upload one or more files">
-                              </div>
+                                <div class="btn">
+                                    <span>Imágenes</span>
+                                    <input id="id_image_self" name="image" type="file" multiple>
+                                </div>
+                                <div class="file-path-wrapper">
+                                    <input class="file-path validate" type="text"
+                                           placeholder="Upload one or more files">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -294,7 +311,7 @@ Base para la interfaz en comun de todos los usuarios.
         </div>
     {% endblock %}
     {% block feedback %}
-        {%  include 'tellme/js_inc.html' %}
+        {% include 'tellme/js_inc.html' %}
     {% endblock %}
 {% endif %}
 {% comment "menu movil" %}
