--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -12,25 +12,40 @@
     <meta name="keywords" content="skyfolk, social, login, registro, sky, folk, red social, red">
     <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico">
     {% compress css %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/login-signup.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/materialize.min.css" media="screen,projection">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/login-signup.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.min.css">
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/materialize.min.css" media="screen,projection">
+        <style>
+            .progress {
+                margin: 0 !important;
+            }
+        </style>
     {% endcompress %}
     {% compress js %}
-    <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
-    <script>
-        $(window).load(function () {
-            $('.progress').fadeOut();
-        });
-    </script>
-    <style>
-        .progress {
-            margin: 0 !important;
-        }
-    </style>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/materialize.min.js"></script>
+        <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+        <script>
+            $(window).load(function () {
+                $('.progress').fadeOut();
+            });
+        </script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-72424818-2', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/materialize.min.js"></script>
     {% endcompress %}
     {% block extra_head %} {% endblock %}
 </head>
@@ -38,10 +53,10 @@
 <body>
 <img class="active-img" src="{{ STATIC_URL }}dist/img/backgrounds/back.jpg" alt="background">
 <header>
-{% comment "loader" %} Desaparece cuando la pagina este lista... {% endcomment %}
-<div class="progress">
-    <div class="indeterminate"></div>
-</div>
+    {% comment "loader" %} Desaparece cuando la pagina este lista... {% endcomment %}
+    <div class="progress">
+        <div class="indeterminate"></div>
+    </div>
 </header>
 <nav class="hide-on-large-only">
     <div class="white nav-wrapper">
