--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -108,24 +108,24 @@
                                             </div>
                                         {% endif %}
                                     {% endwith %}
-                                    {% if node.extra_content %}
+                                    {% if node.publication_photo_extra_content %}
                                         {% comment %} Para publicaciones con URL {% endcomment %}
-                                        {% if node.extra_content.video %}
-                                            {% video node.extra_content.video as my_video %}
+                                        {% if node.publication_photo_extra_content.video %}
+                                            {% video node.publication_photo_extra_content.video as my_video %}
                                                {% video my_video "medium" %}
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img src="
-                                                        {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
-                                                <span class="card-title white-text">{{ node.extra_content.title }}</span>
+                                                        {% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
-                                                <p>{{ node.extra_content.description }}</p>
+                                                <p>{{ node.publication_photo_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a href="{{ node.extra_content.url }}">Ver</a>
+                                                <a href="{{ node.publication_photo_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
