--- a/photologue/templates/photologue/photo_gallery_page.html
+++ b/photologue/templates/photologue/photo_gallery_page.html
@@ -15,13 +15,10 @@
                         {% endfor %}
                     </div>
                 {% endif %}
-
-                <img src="
+                <img class="lazyload" data-src="
                         {% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
                      alt="{{ photo.title }}" title="{{ photo.title }}"
                      onclick="location.href='{{ photo.get_absolute_url }}'">
-
-
             </div>
             <div class="col s12 legend-content">
                 <div class="legend-user-image">
