--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -39,6 +39,7 @@ Base para la interfaz en comun de todos los usuarios.
             ga('create', 'UA-72424818-2', 'auto');
             ga('send', 'pageview');
         </script>
+        <script src="{{ STATIC_URL }}js/lazysizes.min.js" async=""></script>
     {% endcompress %}
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
