--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -89,7 +89,7 @@
                                             <div class="row">
                                             {% for image in images %}
                                                 <div class="col s4 z-depth-2">
-                                                    <img class="responsive-img" src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
+                                                    <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
                                                 </div>
                                             {% endfor %}
                                             </div>
@@ -117,7 +117,7 @@
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
-                                                <img src="
+                                                <img class="lazyload" data-src="
                                                         {% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                 <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
                                             </div>
