--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -6,8 +6,7 @@
 
 {% block include_files %}
     <script async src="{{ STATIC_URL }}js/config.js"></script>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/configuracion.css" type="text/css" media="all"
-          onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/configuracion.css" type="text/css" media="all">
 {% endblock %}
 
 {% block title %} <title>Configuración - {{ request.user.username }}.</title> {% endblock %}
@@ -58,4 +57,19 @@
         </div>
         </div>
     </div>
+    {% comment UTIL PARA REACT %}
+    {% block inner %}
+        <div id="react">
+            <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
+            <i class="pending">Cargando componentes...</i><br><br>
+        </div>
+         <script>
+            window.props = {{ props|safe }};
+            window.react_mount = document.getElementById('react');
+        </script>
+        <script src="{{ STATIC_URL }}js/{{component}}"></script>
+    {% endblock %}
+    {% endcomment %}
 {% endblock %}
+
+
