--- a/skyfolk/templates/account/cf-blocked.html
+++ b/skyfolk/templates/account/cf-blocked.html
@@ -24,9 +24,9 @@
                     <div class="col s12">
                         <div class="header">
                             {% if item.back_image %}
-                                <img class="back-profile-user" src="{{ item.back_image }}">
+                                <img class="back-profile-user lazyload" data-src="{{ item.back_image }}">
                             {% else %}
-                                <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                                <img class="back-profile-user lazyload" data-src="{{ STATIC_URL }}img/nuevo_back.png">
                             {% endif %}
                             <div class="bg-user">
                                 <div onclick="location.href='/profile/{{ item.title }}'"
