--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -86,7 +86,7 @@
                                                         <div class="row">
                                                         {% for image in images %}
                                                             <div class="col s4">
-                                                                <img class="responsive-img z-depth-2" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                                <img class="lazyload responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                             </div>
                                                         {% endfor %}
                                                         </div>
@@ -114,7 +114,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img src="{% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -159,7 +159,7 @@
                                                         <div class="row">
                                                         {% for image in images %}
                                                             <div class="col s4">
-                                                                <img class="responsive-img z-depth-2" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                                <img class="lazyload responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                             </div>
                                                         {% endfor %}
                                                         </div>
@@ -187,7 +187,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_photo_publication.extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -211,7 +211,7 @@
                                             <div class="row images">
                                             {% for image in images %}
                                                 <div class="col s4 z-depth-2 center">
-                                                    <img class="responsive-img" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                    <img class="lazyload responsive-img" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                 </div>
                                             {% endfor %}
                                             </div>
@@ -239,7 +239,7 @@
                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                             <div class="card small">
                                                 <div class="card-image">
-                                                    <img src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                    <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                     <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                                 </div>
                                                 <div class="card-content">
