--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -115,7 +115,7 @@
                                                         <div class="row">
                                                         {% for image in images %}
                                                             <div class="col s4">
-                                                                <img class="responsive-img z-depth-2" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                                <img class="responsive-img z-depth-2 lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                             </div>
                                                         {% endfor %}
                                                         </div>
@@ -144,7 +144,7 @@
                                                      {% else %}
                                                     <div class="card small">
                                                         <div class="card-image">
-                                                            <img src="
+                                                            <img class="lazyload" data-src="
                                                                     {% if node.shared_publication.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                             <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                                         </div>
@@ -190,7 +190,7 @@
                                                         <div class="row">
                                                         {% for image in images %}
                                                             <div class="col s4">
-                                                                <img class="responsive-img z-depth-2" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                                <img class="responsive-img z-depth-2 lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                             </div>
                                                         {% endfor %}
                                                         </div>
@@ -218,7 +218,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_photo_publication.extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -242,7 +242,7 @@
                                             <div class="row">
                                             {% for image in images %}
                                                 <div class="col s4 z-depth-2">
-                                                    <img class="responsive-img" src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                    <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                 </div>
                                             {% endfor %}
                                             </div>
@@ -270,7 +270,7 @@
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
-                                                <img src="
+                                                <img class="lazyload" data-src="
                                                         {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
                                                 <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                             </div>
