--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -9,9 +9,9 @@
                 <div class="col s12">
                     <div class="header">
                         {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
-                            <img class="back-profile-user" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
+                            <img class="back-profile-user lazyload" data-src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
                         {% else %}
-                            <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                            <img class="back-profile-user lazyload" data-src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
                         <i class="fa fa-user fa-2x like-him">
                         </i>
