--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -19,7 +19,7 @@
     </li>
     <li class="hide-on-large-only">
         <div class="field" id="searchform">
-            <form method='post' action='/search/'>{% csrf_token %}
+            <form method='post' action='/user-search/'>{% csrf_token %}
                 {{ searchForm }}
             </form>
         </div>
